隐私政策相关

--- a/options.html
+++ b/options.html
@@ -100,6 +100,20 @@
         .discord-link a:hover {
             background-color: #4a54d4;
         }
+        .footer-links {
+            margin-top: 40px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #777;
+        }
+        .footer-links a {
+            color: #007bff;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        .footer-links a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -131,6 +145,9 @@
         <div class="discord-link">
             <a href="YOUR_DISCORD_INVITE_LINK_HERE" target="_blank" rel="noopener noreferrer" id="discordLinkText">__MSG_optionsDiscordLink__</a>
         </div>
+
+         <div class="footer-links">
+            <a href="privacy.html" target="_blank" rel="noopener noreferrer" id="privacyPolicyLinkText">__MSG_optionsPrivacyPolicyLink__</a></div>
     </div>
 
     <!-- 确保 storage.js 的路径相对于 options.html 是正确的 -->
