隐私政策文字修改

--- a/options.html
+++ b/options.html
@@ -147,7 +147,7 @@
         </div>
 
          <div class="footer-links">
-            <a href="privacy.html" target="_blank" rel="noopener noreferrer" id="privacyPolicyLinkText">__MSG_optionsPrivacyPolicyLink__</a></div>
+            <a href="privacy.html" target="_blank" rel="noopener noreferrer" id="privacyPolicyLinkText">PrivacyPolicy</a></div>
     </div>
 
     <!-- 确保 storage.js 的路径相对于 options.html 是正确的 -->
