添加discord群组链接

--- a/options.html
+++ b/options.html
@@ -143,7 +143,7 @@
         <div id="statusMessage" class="status-message"></div>
 
         <div class="discord-link">
-            <a href="YOUR_DISCORD_INVITE_LINK_HERE" target="_blank" rel="noopener noreferrer" id="discordLinkText">__MSG_optionsDiscordLink__</a>
+            <a href="https://discord.gg/fxDdGGBJ" target="_blank" rel="noopener noreferrer" id="discordLinkText">__MSG_optionsDiscordLink__</a>
         </div>
 
          <div class="footer-links">
