更新隐私政策

--- a/options.html
+++ b/options.html
@@ -147,7 +147,9 @@
         </div>
 
          <div class="footer-links">
-            <a href="privacy.html" target="_blank" rel="noopener noreferrer" id="privacyPolicyLinkText">PrivacyPolicy</a></div>
+            <!-- **** MODIFICATION HERE: Changed href to the full public URL **** -->
+            <a href="https://stayyet.github.io/smart-rate-converter/privacy.html" target="_blank" rel="noopener noreferrer" id="privacyPolicyLinkText">PrivacyPolicy</a>
+        </div>
     </div>
 
     <!-- 确保 storage.js 的路径相对于 options.html 是正确的 -->
